All endpoints have been reviewed